Range#size returns nil for (.."a") and (nil..)

Fixes [Bug #18983]